load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//web_console_v2/api:console_api_package"])

py_library(
    name = "models_lib",
    srcs = ["models.py"],
    imports = ["../.."],
    deps = [
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:mixins_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "@common_sqlalchemy//:pkg",
    ],
)

py_test(
    name = "models_lib_test",
    size = "small",
    srcs = [
        "models_test.py",
    ],
    imports = ["../.."],
    main = "models_test.py",
    deps = [
        ":models_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/auth:services_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:proto_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "//web_console_v2/api/testing:no_web_server_test_case_lib",
        "@common_sqlalchemy//:pkg",
    ],
)

py_library(
    name = "storage_lib",
    srcs = ["storage.py"],
    imports = ["../.."],
    deps = [
        ":models_lib",
        "//web_console_v2/api:envs_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/auth:services_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:filtering_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "@common_sqlalchemy//:pkg",
    ],
)

py_library(
    name = "services_lib",
    srcs = ["services.py"],
    imports = ["../.."],
    deps = [
        ":storage_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "@common_sqlalchemy//:pkg",
    ],
)

py_test(
    name = "services_lib_test",
    size = "small",
    srcs = [
        "services_test.py",
    ],
    imports = ["../.."],
    main = "services_test.py",
    deps = [
        ":models_lib",
        ":services_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/auth:services_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:filtering_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "//web_console_v2/api/testing:no_web_server_test_case_lib",
    ],
)

py_library(
    name = "decorators_lib",
    srcs = ["decorators.py"],
    imports = ["../.."],
    deps = [
        ":services_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/setting:service_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:const_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:flask_utils_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:metrics_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "@common_flask//:pkg",
    ],
)

py_test(
    name = "decorators_lib_test",
    testonly = True,
    srcs = [
        "decorators_test.py",
    ],
    imports = ["../.."],
    main = "decorators_test.py",
    deps = [
        ":decorators_lib",
        ":models_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:const_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_base64_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "//web_console_v2/api/testing:common_lib",
        "@com_github_grpc_grpc//src/python/grpcio/grpc:grpcio",
        "@com_google_protobuf//:protobuf_python",
    ],
)

py_library(
    name = "apis_lib",
    srcs = ["apis.py"],
    imports = ["../.."],
    deps = [
        ":services_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/auth:third_party_sso_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:filtering_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:flask_utils_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:paginate_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils/decorators:decorators_lib",
        "@common_flask_restful//:pkg",
        "@common_marshmallow//:pkg",
        "@common_python_dateutil//:pkg",
        "@common_webargs//:pkg",
    ],
)

py_test(
    name = "apis_lib_test",
    srcs = [
        "apis_test.py",
    ],
    imports = ["../.."],
    main = "apis_test.py",
    deps = [
        ":apis_lib",
        ":models_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:const_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "//web_console_v2/api/testing:common_lib",
        "@common_python_dateutil//:pkg",
    ],
)
