load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//web_console_v2/api:console_api_package"])

py_library(
    name = "models_lib",
    srcs = ["models.py"],
    imports = ["../.."],
    deps = [
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/algorithm:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/dataset:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/mmgr:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "@com_google_protobuf//:protobuf_python",
        "@common_sqlalchemy//:pkg",
    ],
)

py_test(
    name = "models_test",
    size = "medium",
    srcs = [
        "models_test.py",
    ],
    imports = ["../.."],
    main = "models_test.py",
    deps = [
        ":models_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "//web_console_v2/api/testing:no_web_server_test_case_lib",
    ],
)

py_library(
    name = "services_lib",
    srcs = ["services.py"],
    imports = ["../.."],
    deps = [
        ":models_lib",
        "//web_console_v2/api/fedlearner_webconsole:exceptions_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:filtering_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:paginate_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "@common_sqlalchemy//:pkg",
    ],
)

py_test(
    name = "services_test",
    size = "medium",
    srcs = [
        "services_test.py",
    ],
    imports = ["../.."],
    main = "services_test.py",
    deps = [
        ":models_lib",
        ":services_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/dataset:models_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:resource_name_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "//web_console_v2/api/testing:no_web_server_test_case_lib",
    ],
)

py_library(
    name = "cleaner_cronjob_lib",
    srcs = ["cleaner_cronjob.py"],
    imports = ["../.."],
    deps = [
        ":models_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/composer:common_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:file_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
    ],
)

py_test(
    name = "cleaner_cronjob_test",
    size = "medium",
    srcs = [
        "cleaner_cronjob_test.py",
    ],
    imports = ["../.."],
    main = "cleaner_cronjob_test.py",
    deps = [
        ":cleaner_cronjob_lib",
        ":models_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:proto_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "//web_console_v2/api/testing:fake_lib",
        "//web_console_v2/api/testing:no_web_server_test_case_lib",
    ],
)

py_library(
    name = "apis_lib",
    srcs = ["apis.py"],
    imports = ["../.."],
    deps = [
        ":services_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole:exceptions_lib",
        "//web_console_v2/api/fedlearner_webconsole/auth:third_party_sso_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:flask_utils_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils/decorators:decorators_lib",
        "@common_flask_restful//:pkg",
    ],
)

py_test(
    name = "apis_test",
    size = "medium",
    srcs = [
        "apis_test.py",
    ],
    imports = ["../.."],
    main = "apis_test.py",
    deps = [
        ":apis_lib",
        ":models_lib",
        "//web_console_v2/api/fedlearner_webconsole:db_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:pp_datetime_lib",
        "//web_console_v2/api/fedlearner_webconsole/utils:proto_lib",
        "//web_console_v2/api/protocols/fedlearner_webconsole/proto:py_proto",
        "//web_console_v2/api/testing:common_lib",
    ],
)
